# AeroEdge

./: .gitignore  001-Actor-Model-and-Quark-Mapping.md  002-Message-Model-Command-and-Event.md  003-Processing-Context.md  004-Flow-Runtime-and-DAG.md  005-Node-SDK-and-INode.md  006-Drivers-and-Sources.md  007-State-and-Persistence.md  008-Extension-Model-Native-and-WASM.md  009-Deployment-and-Flow-Versioning.md  010-Distribution-and-Horizontal-Scale.md  011-Firmware-OTA.md  012-MES-Integration-Hook.md  013-Solution-Topology-and-Studio.md  014-Transport-Interface-and-Pluggable-Transports.md  015-Configuration-Model-and-Studio-Plugin-UI.md  AGENTS.md  ArchitectureSpecification.md  CMakeLists.txt  CONVENTIONS.md  IMPLEMENTATION-PLAN.md  README.md
.github/workflows/: ci.yml
docs/: setup-guide.md  user-guide.md
examples/: hello_flow.json
examples/ext_native/: gain_node.cpp  gain_node_badabi.cpp
include/aero/api/: rest_api.hpp
include/aero/cluster/: cluster.hpp  migration.hpp  placement.hpp
include/aero/core/: compiled_flow.hpp  edge_actor.hpp  persistent_actor.hpp  registry.hpp
include/aero/drivers/: generator_driver.hpp
include/aero/ext/: native_loader.hpp  wasm_runtime.hpp
include/aero/mes/: mes.hpp  outbox.hpp  rest_mes_adapter.hpp
include/aero/nodes/: builtin_nodes.hpp  compute_nodes.hpp  expr_rule_node.hpp  mes_nodes.hpp
include/aero/ota/: fleet.hpp  ota.hpp
include/aero/runtime/: flow_actor.hpp  flow_compiler.hpp  runtime.hpp
include/aero/schema/: application.hpp
include/aero/sdk/: driver.hpp  ext_abi.h  node.hpp  processing_context.hpp
include/aero/sdk_native/: aero_node.h
include/aero/transport/: frame_codec.hpp  grpc_client_transport.hpp  grpc_transport.hpp  mqtt_client_transport.hpp  mqtt_transport.hpp  resequencer.hpp  tcp_transport.hpp  transport.hpp
src/cli/: aero_cli_main.cpp
src/runtime/: aero_runtime_main.cpp
studio/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
studio/scripts/: e2e.sh  shoot.mjs
studio/src/: App.tsx  ConfigForm.tsx  FlowDesigner.tsx  api.ts  application.ts  catalog.ts  components.tsx  styles.css
studio/src/__tests__/: api.test.ts  application.test.ts  catalog.test.ts
studio/src/tier2/: ModbusRegisterMap.tsx
tests/: CMakeLists.txt  api_integration.cpp  api_reload.cpp  breadth_nodes.cpp  chaos_transport.hpp  cluster_place.cpp  cross_node_message.cpp  expr_rule.cpp  fenced_migration.cpp  flow_validation.cpp  flow_zero_alloc.cpp  grpc_transport.cpp  hot_reload.cpp  mes_outbox.cpp  mqtt_transport.cpp  native_extension.cpp  ota_rollout.cpp  persistence_recovery.cpp  placement_affinity.cpp  proc_util.hpp  reload_buildonly.cpp  resequencer.cpp  rollback.cpp  runtime_deploy.cpp  schema_load.cpp  stateful_node.cpp  stream_backpressure.cpp  stream_ingest.cpp  tcp_transport.cpp  transport_gate.cpp  walking_skeleton.cpp  wasm_seam.cpp
tests/py/: frame_codec.py  grpc_echo_server.py  mqtt_broker.py
